2002-03-09  Adam Megacz  <adam@xwt.org>

	* java/lang/Win32Process.java (ConcreteProcess): Now throws an
	IOException so that Throwable.printStackTrace fails correctly.

2002-03-08  Adam Megacz  <adam@xwt.org>

	* java/net/natPlainSocketImpl.cc (read, write, close): Formatting
	fixed.
	
2002-03-09  Bryce McKinlay  <bryce@waitaki.otago.ac.nz>

	* posix.cc (_Jv_platform_gettimeofday): Make sure result doesn't get
	truncated to int.

2002-03-08  Tom Tromey  <tromey@redhat.com>

	* include/jni.h: Include stdio.h.

2002-03-08  Tom Tromey  <tromey@redhat.com>

	* posix.cc (internal_gettimeofday): New function.
	(_Jv_select): Use it.

2002-03-07  Adam Megacz  <adam@xwt.org>

	* java/lang/natSystem.cc (currentTimeMillis): Now uses updated
       _Jv_platform_gettimeofday signature.
	
2002-03-07  Adam Megacz  <adam@xwt.org>

       * win32.cc (_Jv_platform_gettimeofday): Now takes no args,
       returns jlong. Added implementation
       * posix.cc (_Jv_platform_gettimeofday): Now takes no args,
       returns jlong.
       * win32.h (_Jv_platform_gettimeofday): Now takes no args,
       returns jlong.
       * posix.h (_Jv_platform_gettimeofday): Now takes no args,
       returns jlong.
       * java/lang/natSystem.cc (currentTimeMillis): Now uses updated
       _Jv_platform_gettimeofday signature.

2002-03-07  Adam Megacz  <adam@xwt.org>

        * java/net/natPlainSocketImpl.cc: Changed USE_WINSOCK to
        WIN32, and added thunks for read(), write(), and close().
        * java/net/natPlainSocketImpl.cc (accept, read, read):
        Disabled timeouts on WIN32 pending discussion.

2002-03-07  Adam Megacz  <adam@xwt.org>

        * java/io/FileDescriptor.java: Initialize in/out/err in init().
        * java/io/natFileDescriptorWin32.cc (init()): Added function.
        * java/io/natFileDescriptorPosix.cc (init()): Added function.
        * java/io/natFileDescriptorEcos.cc (init()): Added function.

2002-03-07  Bryce McKinlay  <bryce@waitaki.otago.ac.nz>
