@@ -1,3 +1,9 @@
+2002-03-09  Per Bothner  <per@bothner.com>
+
+	* gnu/gcj/xlib/WindowAttributes.java  Assign null to RawData, not 0.
+	* gnu/gcj/xlib/XImage.java:  Likewise.
+	* gnu/gcj/xlib/XColor.java:  Likewise.
+
 2002-03-09  Adam Megacz  <adam@xwt.org>
 
 	* java/lang/Win32Process.java (ConcreteProcess): Now throws an
